--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Willkommen! Beantworten Sie die folgenden Fragen, damit wir Ihnen bessere Waschprogramme empfehlen und Ihr Wascherlebnis insgesamt verbessern können.",
     "CL_SL_CM_recommended_program_guide": "Programmführer empfehlen",
     "CL_SL_CM_let's_get_started": "Lasst uns anfangen!",
-    "CL_SL_CM_thank_you": "Danke schön!",
+    "CL_SL_CM_thank_you": "Danke schön",
     "CL_SL_CM_questionnaire_congratulations": "Herzlichen Glückwunsch zum Ausfüllen des Fragebogens, wir empfehlen Ihnen auf Basis des Fragebogens das passende Waschprogramm, bitte schauen Sie bei „Empfohlen“ nach.",
     "CL_DV_OV_light_setting_desc": "Schalten Sie die Beleuchtung Ihres Backofens EIN oder AUS. Sie können die Farbe und Dauer im Lichteinstellungsmenü ändern.",
     "CL_DV_OV_lock_setting_desc": "Mit der Sperre deaktivieren Sie den Touchscreen.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Extra scharf",
     "CL_CF_HP_card": "Karte",
     "CL_CF_HP_enter_card_name": "Geben Sie den Kartennamen ein ...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Bitte wählen Sie mindestens eine Zutat aus.",
+    "CL_CF_FM_no_shopping_items": "Keine Einkaufsartikel",
+    "CL_CF_FM_add_food_from_below": "Lebensmittel von unten hinzufügen",
+    "CL_CF_FM_x_has_been_removed": "** wurde entfernt.",
+    "CL_CF_CO_waiting": "Warten"
 }
