--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Καλωσόρισμα! Απαντήστε στις παρακάτω ερωτήσεις για να μας βοηθήσετε να προτείνουμε καλύτερα προγράμματα πλύσης, βελτιώνοντας τη συνολική εμπειρία πλύσης ρούχων.",
     "CL_SL_CM_recommended_program_guide": "Προτείνετε οδηγό προγράμματος",
     "CL_SL_CM_let's_get_started": "Ας ξεκινήσουμε!",
-    "CL_SL_CM_thank_you": "Σας ευχαριστώ!",
+    "CL_SL_CM_thank_you": "Σας ευχαριστώ",
     "CL_SL_CM_questionnaire_congratulations": "Συγχαρητήρια για τη συμπλήρωση του ερωτηματολογίου, θα σας προτείνουμε το κατάλληλο πρόγραμμα πλυντηρίου με βάση το ερωτηματολόγιο, ελέγξτε στο \"Συνιστάται\".",
     "CL_DV_OV_light_setting_desc": "Ανάψτε ή σβήστε τα φώτα του φούρνου σας. Μπορείτε να αλλάξετε το χρώμα και τη διάρκεια στο μενού ρυθμίσεων φωτός.",
     "CL_DV_OV_lock_setting_desc": "Με το κλείδωμα, απενεργοποιείτε την οθόνη αφής.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Εξαιρετικά ζεστό",
     "CL_CF_HP_card": "Κάρτα",
     "CL_CF_HP_enter_card_name": "Εισαγάγετε το όνομα της κάρτας...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Επιλέξτε τουλάχιστον ένα συστατικό.",
+    "CL_CF_FM_no_shopping_items": "Δεν υπάρχουν είδη αγορών",
+    "CL_CF_FM_add_food_from_below": "Προσθέστε φαγητό από κάτω",
+    "CL_CF_FM_x_has_been_removed": "** έχει αφαιρεθεί.",
+    "CL_CF_CO_waiting": "αναμονή"
 }
