--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Добредојдовте! Одговорете на следните прашања за да ни помогнете да препорачаме подобри програми за перење алишта, со што ќе го подобрите вашето целокупно искуство при перење.",
     "CL_SL_CM_recommended_program_guide": "Препорачај програмски водич",
     "CL_SL_CM_let's_get_started": "Ајде да започнеме!",
-    "CL_SL_CM_thank_you": "Ви благодариме!",
+    "CL_SL_CM_thank_you": "Ви благодариме",
     "CL_SL_CM_questionnaire_congratulations": "Честитки за пополнувањето на прашалникот, ќе ви ја препорачаме соодветната програма за перење алишта врз основа на прашалникот, ве молиме проверете во „Препорачано“.",
     "CL_DV_OV_light_setting_desc": "Вклучете или исклучете ги светлата на рерната. Можете да ги промените бојата и времетраењето во менито за поставки за светло.",
     "CL_DV_OV_lock_setting_desc": "Со заклучувањето, го оневозможувате екранот на допир.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Екстра жешко",
     "CL_CF_HP_card": "Картичка",
     "CL_CF_HP_enter_card_name": "Внесете име на картичката...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Изберете барем една состојка.",
+    "CL_CF_FM_no_shopping_items": "Нема артикли за купување",
+    "CL_CF_FM_add_food_from_below": "Додадете храна одоздола",
+    "CL_CF_FM_x_has_been_removed": "** е отстранета.",
+    "CL_CF_CO_waiting": "чекање"
 }
