--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Selamat datang! Jawab soalan berikut untuk membantu kami mengesyorkan program dobi yang lebih baik, meningkatkan pengalaman dobi anda secara keseluruhan.",
     "CL_SL_CM_recommended_program_guide": "Mengesyorkan panduan program",
     "CL_SL_CM_let's_get_started": "Mari mulakan!",
-    "CL_SL_CM_thank_you": "Terima kasih!",
+    "CL_SL_CM_thank_you": "Terima kasih",
     "CL_SL_CM_questionnaire_congratulations": "Tahniah kerana melengkapkan soal selidik, kami akan mengesyorkan anda program dobi yang sesuai berdasarkan soal selidik, sila semak dalam \"Disyorkan\".",
     "CL_DV_OV_light_setting_desc": "Hidupkan atau MATI lampu ketuhar anda. Anda boleh menukar warna dan tempoh dalam menu tetapan cahaya.",
     "CL_DV_OV_lock_setting_desc": "Dengan kunci, anda melumpuhkan skrin sentuh.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Lebih panas",
     "CL_CF_HP_card": "Kad",
     "CL_CF_HP_enter_card_name": "Masukkan nama kad...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Sila pilih sekurang-kurangnya satu bahan.",
+    "CL_CF_FM_no_shopping_items": "Tiada barang belanja",
+    "CL_CF_FM_add_food_from_below": "Tambah makanan dari bawah",
+    "CL_CF_FM_x_has_been_removed": "** telah dikeluarkan.",
+    "CL_CF_CO_waiting": "menunggu"
 }
