--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Bem-vindo! Responda às seguintes perguntas para nos ajudar a recomendar melhores programas de lavanderia, aprimorando sua experiência geral de lavanderia.",
     "CL_SL_CM_recommended_program_guide": "Recomendar guia de programa",
     "CL_SL_CM_let's_get_started": "Vamos começar!",
-    "CL_SL_CM_thank_you": "Obrigado!",
+    "CL_SL_CM_thank_you": "Obrigado",
     "CL_SL_CM_questionnaire_congratulations": "Parabéns por responder ao questionário, recomendaremos o programa de lavanderia apropriado com base no questionário, marque em \"Recomendado\".",
     "CL_DV_OV_light_setting_desc": "Ligue ou desligue as luzes do seu forno. Você pode alterar a cor e a duração no menu de configurações de luz.",
     "CL_DV_OV_lock_setting_desc": "Com o bloqueio, você desabilita a tela sensível ao toque.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Extra quente",
     "CL_CF_HP_card": "Cartão",
     "CL_CF_HP_enter_card_name": "Digite o nome do cartão...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Selecione pelo menos um ingrediente.",
+    "CL_CF_FM_no_shopping_items": "Nenhum item de compras",
+    "CL_CF_FM_add_food_from_below": "Adicione comida de baixo",
+    "CL_CF_FM_x_has_been_removed": "** foi removido.",
+    "CL_CF_CO_waiting": "esperando"
 }
