--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Dobrodošli! Odgovorite na naslednja vprašanja, da nam pomagate pri priporočanju boljših programov pranja perila in tako izboljšate svojo splošno izkušnjo pranja perila.",
     "CL_SL_CM_recommended_program_guide": "Priporočite programski vodnik",
     "CL_SL_CM_let's_get_started": "Pa začnimo!",
-    "CL_SL_CM_thank_you": "Hvala!",
+    "CL_SL_CM_thank_you": "Hvala",
     "CL_SL_CM_questionnaire_congratulations": "Čestitamo za izpolnjen vprašalnik, na podlagi vprašalnika vam bomo priporočili ustrezen program pranja perila, preverite v \"Priporočeno\".",
     "CL_DV_OV_light_setting_desc": "VKLOPITE ali IZKLOPITE luči v pečici. Barvo in trajanje lahko spremenite v meniju z nastavitvami svetlobe.",
     "CL_DV_OV_lock_setting_desc": "S ključavnico onemogočite zaslon na dotik.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Ekstra vroče",
     "CL_CF_HP_card": "kartica",
     "CL_CF_HP_enter_card_name": "Vnesite ime kartice ...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Prosimo izberite vsaj eno sestavino.",
+    "CL_CF_FM_no_shopping_items": "Brez nakupovalnih artiklov",
+    "CL_CF_FM_add_food_from_below": "Dodajte hrano od spodaj",
+    "CL_CF_FM_x_has_been_removed": "** je bil odstranjen.",
+    "CL_CF_CO_waiting": "čakanje"
 }
