--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4429,7 +4429,7 @@
     "CL_SL_CM_laundry_services_detail": "Ласкаво просимо! Дайте відповіді на наступні запитання, щоб допомогти нам рекомендувати кращі програми прання, покращуючи загальний досвід прання.",
     "CL_SL_CM_recommended_program_guide": "Рекомендуйте телегід",
     "CL_SL_CM_let's_get_started": "Давайте почнемо!",
-    "CL_SL_CM_thank_you": "дякую!",
+    "CL_SL_CM_thank_you": "дякую",
     "CL_SL_CM_questionnaire_congratulations": "Вітаємо із заповненням анкети, ми порекомендуємо вам відповідну програму прання на основі анкети, будь ласка, перевірте в розділі «Рекомендовано».",
     "CL_DV_OV_light_setting_desc": "Увімкніть або вимкніть світло духовки. Ви можете змінити колір і тривалість у меню налаштувань освітлення.",
     "CL_DV_OV_lock_setting_desc": "За допомогою блокування ви вимикаєте сенсорний екран.",
@@ -4611,5 +4611,10 @@
     "CL_DV_WM_extra_hot": "Дуже гарячий",
     "CL_CF_HP_card": "картка",
     "CL_CF_HP_enter_card_name": "Введіть назву картки...",
-    "smart_energy_helps_1": ""
+    "smart_energy_helps_1": "",
+    "CL_CF_FM_select_at_list_one_ingredient": "Будь ласка, виберіть принаймні один інгредієнт.",
+    "CL_CF_FM_no_shopping_items": "Без товарів для покупок",
+    "CL_CF_FM_add_food_from_below": "Додайте їжу знизу",
+    "CL_CF_FM_x_has_been_removed": "** видалено.",
+    "CL_CF_CO_waiting": "очікування"
 }
